big update front until add ingredients

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -8,3 +8,16 @@
   color: white;
   align-items: center;
 }
+
+// a, button {
+//   text-decoration: none;
+//   color: $light;
+//   &:hover {
+//     color: $light;
+//   }
+//   background-color: transparent;
+// }
+
+// .btn-custom {
+//   background-color: red;
+// }
