--- a/app/assets/stylesheets/components/_ingredient_card.scss
+++ b/app/assets/stylesheets/components/_ingredient_card.scss
@@ -6,8 +6,8 @@
   border-radius: 8px;
   border-radius: 8px;
   margin-bottom: 10px;
-  background-color: #FBDDBA;
-
+  // background-color: #FBDDBA;
+  background-color: #faf1e7;
 }
 
 
