--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,7 +4,7 @@
   border-top-right-radius: 30px;
   width: 100%;
   z-index: 5;
-  position: sticky;
+  position: fixed;
   bottom: 0 !important;
   left: 0; /* Pour occuper toute la largeur de l'écran */
   right: 0;
