--- a/app/assets/stylesheets/pages/_filter_recipes_form.scss
+++ b/app/assets/stylesheets/pages/_filter_recipes_form.scss
@@ -3,3 +3,49 @@
   font-size: x-large;
   font-weight: bold;
 }
+
+.number {
+  font-family: Manrope;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+p.filter {
+  font-family: Manrope;
+  font-size: 25px;
+}
+
+.modal-dialog {
+  height: 100dvh;
+  background-image: url("bg-pastel.png");
+  background-size: cover;
+  background-position: center;
+  z-index: -100;
+}
+
+.btn-patate {
+  padding: 35px 30px;
+  text-decoration: none;
+  color: $light;
+  display: block;
+  font-weight: bold;
+  font-size: 20px;
+  position: relative;
+  text-align: center;
+  &:hover {
+    color: $light;
+  }
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url("btn.png");
+    z-index: -1;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
