--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -1,10 +1,10 @@
 
 
-<div class="main-container mt-4">
+<div class="index-container pt-4">
   <div class="header-titre-subtitre">
     <div class = "titre-carrotte-frigo">
-      <%= image_tag("logo.png", class: "petite-carrote") %>
-      <h1 class="title-frigo">RAJOUTER UN INGREDIENT</h1>
+      <%= image_tag("carrot-logo.png", class: "petite-carrote") %>
+      <h1 class="title-frigo">AJOUTER UN INGREDIENT</h1>
     </div>
 
     <div class="instruction">
@@ -16,7 +16,7 @@
 <div class="container pe-0 mt-3 ps-0">
   <div class="ingredient-form">
     <%= form_for @ingredient, url: ingredients_path do |f| %>
-      <%= f.label :name, "Ingredient :", class: "name-label" %>
+      <%= f.label :name, "Ingrédient :", class: "name-label" %>
       <%= f.text_field :name, class: "ingredient-name", placeholder: "Ex: Kiri, carotte, etc." %>
 
       <%= f.label :quantity, "Quantité :", class: "quantity-label" %>
@@ -37,7 +37,7 @@
       </div>
 </div>
 <div class="submit-button mt-3">
-  <%= f.submit "Ajouter l'ingrédient", class:"submit-button" %>
+  <%= f.submit "Ajouter", class:"submit-button" %>
 </div>
     <% end %>
   </div>
