--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@ body {
 <%# FIN STYLE--------------------------------------------- %>
 <div class="bg-home">
 
-
+pouet 
   <div class="session">
     <% unless user_signed_in? %>
       <div class="fixed-bottom">
