--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -169,11 +169,11 @@
   // width: 50%;
 
   flex-shrink: 0;
-  background-color: rgba(251, 221, 186, 0.95);
+  background-color: #F28E19;;
   font-family: Manrope;
   margin-top: 20px;
   text-decoration: none;
-  color: black;
+  color: white;
   padding: 10px;
   border-top-right-radius: 40px;
   border-top-left-radius: 90px;
@@ -210,11 +210,11 @@
   // width: 50%;
 
   flex-shrink: 0;
-  background-color: rgba(251, 221, 186, 0.95);
+  background-color: #F28E19;;
   font-family: Manrope;
   margin-top: 20px;
   text-decoration: none;
-  color: black;
+  color: white;
   padding: 10px;
   border-top-right-radius: 40px;
   border-top-left-radius: 90px;
@@ -234,7 +234,7 @@
 
 #boutons-frigo2 {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 .fa-heart {
@@ -289,3 +289,4 @@ input::placeholder {
   cursor: pointer;
 
 }
+
