--- a/app/views/ingredients/_filter_recipes_form.html.erb
+++ b/app/views/ingredients/_filter_recipes_form.html.erb
@@ -2,7 +2,7 @@
 <div class="container filter-content">
   <p><strong>Qu'est-ce qu'on cuisine aujourd'hui ? </strong></p>
     <div class="filter-recipe-form">
-      <%= simple_form_for :choices, url: recipes_path, method: :get, html: { data: { loader_target: "form", action: "submit->loader#displayLoader "} } do |f| %>
+      <%= simple_form_for :choices, url: generate_recipes_recipes_path, method: :get, html: { data: { loader_target: "form", action: "submit->loader#displayLoader "} } do |f| %>
 
       <div data-controller="quantity">
 
