--- a/app/views/ingredients/_filter_recipes_form.html.erb
+++ b/app/views/ingredients/_filter_recipes_form.html.erb
@@ -23,7 +23,8 @@
         </div>
 
 
-        <%= f.submit "Trouve moi des recettes !", class: "btn-patate"%>
+        <%= f.submit "Trouve moi des recettes !", class: "btn-patate-forme" %>
+
       <% end %>
 
 
