--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -36,9 +36,9 @@
       <%= f.date_field :purchase_date, class: "ingredient-date" %>
       </div>
 </div>
-<div class="submit-button mt-3">
+<div class="sub">
 
-  <button><%= f.submit "Ajouter l'ingrédient", class:"submit-button" %></button>
+  <%= f.submit "Ajouter l'ingrédient", class:"btn-patate-forme mt-4" %>
 
 </div>
     <% end %>
