--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -360,3 +360,30 @@ from {
  animation: rotating 2s linear infinite;
 }
 
+
+.btn-patate-forme {
+  padding: 35px 30px;
+  text-decoration: none;
+  color: $light;
+  display: block;
+  font-weight: bold;
+  font-size: 20px;
+
+  text-align: center;
+  width: 100%;
+  height: 100%;
+
+  background-image: url("patate-fonce.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+
+
+
+  &:hover {
+    color: $light;
+  }
+
+  border: none;
+  background-color: transparent
+}
