--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,9 @@
 
 
-<div class="main-container mt-4" data-controller="recipes">
+<div class="modal-content pt-4" data-controller="recipes">
   <div class="header-titre-subtitre">
     <div class = "titre-carrotte-frigo">
-      <%= image_tag("logo.png", class: "petite-carrote") %>
+      <%= image_tag("carrot-logo.png", class: "petite-carrote") %>
       <h1 class="title-frigo">IDEES DE RECETTES</h1>
     </div>
 
