--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -7,7 +7,7 @@ body {
 </style>
 
   <div class="header-recipe-show">
-<div class="container">
+<div class="modal-content pt-4">
     <div class="row">
       <div class="col mt-4 bloc-quick-infos">
         <div class="image-recipe">
