--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -22,7 +22,7 @@
           <div class="image-plat">
           <%#= image_tag recipe.photo.service_url, height: 300, width: 400, crop: :fill %>
 
-            <%= cl_image_tag(recipe.image_url, class: "plat-image") %>
+            <%# <%= cl_image_tag(recipe.image_url, class: "plat-image") %> %>
           </div>
 
           <div class="content row ingredient-infos mx-0">
