--- a/app/views/ingredients/add_an_image.html.erb
+++ b/app/views/ingredients/add_an_image.html.erb
@@ -1,7 +1,7 @@
-<div class="main-container mt-4">
+<div class="modal-content pt-4"">
   <div class="header-titre-subtitre">
     <div class = "titre-carrotte-frigo">
-      <%= image_tag("logo.png", class: "petite-carrote") %>
+      <%= image_tag("carrot-logo.png", class: "petite-carrote") %>
       <h1 class="title-frigo">AJOUTEZ VOTRE FRIGO</h1>
     </div>
     <br>
@@ -22,7 +22,7 @@
   </div>
   <br>
   <div class="button-analyser">
-    <%= form.submit "Récupérez vos ingrédients", class: "submit-button" %>
+    <%= form.submit "Récupérez vos ingrédients", class: "btn-patate-forme mt-4" %>
   </div>
     <% end %>
 </div>
