--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,7 +7,7 @@ body {
   // flex-direction: column;
   // justify-content: space-evenly;
   // margin: 0;
-
+  z-index: -50;
 }
 
 .titre {
@@ -71,6 +71,7 @@ body {
   font-family: Manrope;
   color: white;
   font-size: 20px;
+  font-weight: bold;
   // position: absolute;
   bottom: 20px;
   // left: 50%;
