--- a/app/views/ingredients/results.html.erb
+++ b/app/views/ingredients/results.html.erb
@@ -13,7 +13,7 @@
     </div>
 
     <div id="results-container"></div>
-    <button id="validate-button">Valider mon frigo</button>
+    <button class="btn-patate-forme">Valider mon frigo</button>
   </div>
 </div>
 
