--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -4,7 +4,7 @@
   <div class="header-titre-subtitre">
     <div class = "titre-carrotte-frigo">
       <%= image_tag("carrot-logo.png", class: "petite-carrote") %>
-      <h1 class="title-frigo">IDEES DE RECETTES</h1>
+      <h1 class="title-frigo">IDÉES DE RECETTES</h1>
     </div>
 
     <div class="instruction">
