--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,8 +6,8 @@ body {
 }
 </style>
 
-  <div class="header-recipe-show">
-<div class="modal-content pt-4">
+<div class="header-recipe-show px-4">
+
     <div class="row">
       <div class="col mt-4 bloc-quick-infos">
         <div class="image-recipe">
@@ -110,5 +110,4 @@ body {
     <p>BRAVO, recette terminée ! On enlève les ingrédients de votre frigo ...</p>
   </div> %>
 
-</div>
 </div>
