--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -102,14 +102,14 @@
 // }
 
 
-.modal-content {
-  height: 100dvh;
-  background-image: url("bg-pastel.png");
-  background-size: cover;
-  background-position: center;
-  z-index: -100;
-  border: none;
-}
+// .modal-content {
+//   height: 100dvh;
+//   background-image: url("bg-pastel.png");
+//   background-size: cover;
+//   background-position: center;
+//   z-index: -100;
+//   border: none;
+// }
 
 .modal-body {
   border: none;
