--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -45,7 +45,7 @@
 </div>
 </div>
 
-<script>
+<%# <script>
 
 document.addEventListener("DOMContentLoaded", function() {
 var quantityField = document.querySelector(".ingredient-quantity");
@@ -63,4 +63,4 @@ var quantityField = document.querySelector(".ingredient-quantity");
   });
    });
 
-</script>
+</script> %>
