--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -102,7 +102,7 @@
 // }
 
 
-.modal-content {
+.bg-content {
   height: 100dvh;
   background-image: url("bg-pastel.png");
   background-size: cover;
