--- a/app/views/ingredients/add_an_image.html.erb
+++ b/app/views/ingredients/add_an_image.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-content pt-4"">
+<div class="bg pt-4"">
   <div class="header-titre-subtitre">
     <div class = "titre-carrotte-frigo">
       <%= image_tag("carrot-logo.png", class: "petite-carrote") %>
