--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -114,7 +114,7 @@
   <!-- Modal filtres-->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content bg-warning-subtle">
+      <div class="bg-content bg-warning-subtle">
 
         <div class="modal-header">
           <h1 class="modal-title" id="exampleModalLabel"> <strong> Personnaliser ma recette </strong></h1>
