--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="modal-content pt-4" data-controller="recipes">
+<div class="bg-content pt-4" data-controller="recipes">
   <div class="header-titre-subtitre">
     <div class = "titre-carrotte-frigo">
       <%= image_tag("carrot-logo.png", class: "petite-carrote") %>
