--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-content pt-4">
+<div class="bg-content pt-4">
     <div class="header-titre-subtitre">
       <div class = "titre-carrotte-frigo">
         <%= image_tag("carrot-logo.png", class: "petite-carrote") %>
