--- a/app/views/ingredients/results.html.erb
+++ b/app/views/ingredients/results.html.erb
@@ -13,8 +13,6 @@
     </div>
 
     <div id="results-container"></div>
-    <button id="validate-button">Valider mon frigo</button>
+    <button id="validate-fridge-button">Valider mon frigo</button>
   </div>
 </div>
-
-<script src="/home/soledad/code/guapamole/save-the-carrot/app/javascript/controllers/results_controller.js"></script>
