--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -8,7 +8,7 @@ body {
 
 
   <div class="header-recipe-show">
-<div class="bg-content pt-4">
+<div class="py-2 mx-3">
 
     <div class="row">
       <div class="col mt-4 bloc-quick-infos">
