--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -4,7 +4,7 @@
     <div class="fixed-bottom">
       <%= link_to "Générer une recette", ingredients_path, class:"btn-patate"%>
 
-      <%= link_to "Ajouter un produit", add_an_image_ingredients_path, class:"btn-patate"%>
+      <%= link_to "Ajouter un produit", new_ingredient_path, class:"btn-patate"%>
 
  </div>
 </div>
