--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -14,8 +14,7 @@
 
 <div class="container pe-0 mt-3 ps-0">
   <div class="ingredient-form ps-3 pt-3 pe-0">
-    <%= form_for @ingredient, url: ingredients_path do |f| %>
-      <%= f.label :name, "Ingrédient :", class: "name-label" %>
+<%= form_for @ingredient, url: ingredients_path, html: { multipart: true } do |f| %>      <%= f.label :name, "Ingrédient :", class: "name-label" %>
       <%= f.text_field :name, class: "ingredient-name", placeholder: "Ex: Kiri, carotte, etc." %>
 
       <%= f.label :quantity, "Quantité :", class: "quantity-label" %>
@@ -39,8 +38,7 @@
 </div>
 <div class="sub">
 
-  <%= f.submit "Ajouter l'ingrédient", class:"btn-patate-forme mt-4" %>
-
+  <%= f.submit "Ajouter l'ingrédient", class:"submit-button btn-patate-forme mt-4" %>
 </div>
     <% end %>
   </div>
