--- a/app/assets/stylesheets/pages/_filter_recipes_form.scss
+++ b/app/assets/stylesheets/pages/_filter_recipes_form.scss
@@ -15,13 +15,13 @@ p.filter {
   font-size: 25px;
 }
 
-.modal-dialog {
-  height: 100dvh;
-  background-image: url("bg-pastel.png");
-  background-size: cover;
-  background-position: center;
-  z-index: -100;
-}
+// .modal-dialog {
+//   height: 100dvh;
+//   background-image: url("bg-pastel.png");
+//   background-size: cover;
+//   background-position: center;
+//   z-index: -100;
+// }
 
 // .btn-patate {
 //   padding: 35px 30px;
