--- a/app/assets/stylesheets/components/_ingredient_card.scss
+++ b/app/assets/stylesheets/components/_ingredient_card.scss
@@ -134,9 +134,12 @@ border: none;
 
 .image-plat {
   width: 100px;
-  height: 100%;
+  height: 100px;
   margin: 8px;
   flex-shrink: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
 }
 
 .plat-image {
