--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,8 +1,13 @@
 .footer {
-  background-color: $orange;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
+  // background-color: $orange;
+  // border-top-left-radius: 30px;
+  // border-top-right-radius: 30px;
+  background-image: url("patate-fonce.png");
+  background-repeat: no-repeat;
+
   width: 100%;
+
+  height: 150%;
   z-index: 5;
   position: fixed;
   bottom: 0 !important;
