--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,12 +13,15 @@
   cursor: pointer;
 }
 
-.fa-trash-can {
-  color: black;
-  font-size: 22px;
-}
+// .fa-trash-can {
+//   color: black;
+//   font-size: 22px;
+// }
 
 .poubelle {
   margin-top: 14px;
   margin-right: 14px;
+  color: #F28E19;
+  font-size: 22px;
+  
 }
