--- a/app/assets/stylesheets/components/_ingredient_card.scss
+++ b/app/assets/stylesheets/components/_ingredient_card.scss
@@ -6,8 +6,10 @@
   border-radius: 8px;
   border-radius: 8px;
   margin-bottom: 10px;
-  // background-color: #FBDDBA;
   background-color: #faf1e7;
+  align-content: stretch;
+  align-items: center;
+  position: relative;
 }
 
 
@@ -139,7 +141,10 @@ border: none;
   flex-shrink: 0;
   display: flex;
   flex-direction: column-reverse;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: stretch;
+  align-content: center;
+  flex-wrap: wrap;
 }
 
 .plat-image {
@@ -173,6 +178,8 @@ border: none;
 .ingredient-infos {
   padding-top: 12px;
   padding-bottom: 12px;
+  width: 179px;
+
 
 }
 
