--- a/app/assets/stylesheets/pages/_show_cookbook.scss
+++ b/app/assets/stylesheets/pages/_show_cookbook.scss
@@ -12,9 +12,14 @@
 }
 
 .fa-trash-can {
-  color: black;
+  color: #F28E19;
   font-size: 22px;
+  text-decoration: none;
+}
 
+.fa-trash-can:active {
+  color: red;
+  // transition: color 2s ease-out;
 }
 
 .poubelle {
@@ -30,4 +35,17 @@
 .instruction {
   font-size: 20px;
   font-weight: 800;
+}
+
+.destroy {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
+  text-decoration: none;
+  transition: color 5s ease-out;
+}
+
+.destroy:active {
+  color: rgb(197, 197, 197);
 }
