footer update + microfront update

--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -34,7 +34,7 @@
       <%= f.date_field :purchase_date, class: "ingredient-date" %>
       </div>
 
-      <%= f.file_field :photo, class: "ingredient-photo" %>
+      <%= f.file_field :photo, class: "add-photo-btn" %>
   <%= f.submit "Ajouter l'ingrédient", class:"submit-button btn-patate-forme mt-4" %>
 </div>
 <div class="sub">
