--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,12 +2,10 @@
   // background-color: $orange;
   // border-top-left-radius: 30px;
   // border-top-right-radius: 30px;
-  background-image: url("patate-fonce.png");
-  background-repeat: no-repeat;
-
+  background-image: url("footer-patate.png");
+  background-size: 150%;
+  background-position: center top;
   width: 100%;
-
-  height: 150%;
   z-index: 5;
   position: fixed;
   bottom: 0 !important;
@@ -23,7 +21,8 @@
   height: auto;
   margin-left: 35px;
   margin-right: 35px;
-  padding-top: 7px;
+  padding-top: 37px;
+  padding-bottom: 35px;
 }
 
 .icons-footer img {
