--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
     <div class="icontext">
       <%= link_to ingredients_path, class:"text-footer" do %>
         <%= image_tag "refrigerateur.png", alt: "Le Wagon", width: 40 %>
-        <p class="mb-1">Frigo</p>
+        <%# <p class="mb-1">Frigo</p> %>
       <% end %>
     </div>
 
@@ -12,14 +12,14 @@
     <div class="icontext">
       <%= link_to cookbook_path(current_user), class:"text-footer" do %>
         <%= image_tag "open-book.png", alt: "Le Wagon", width: 40 %>
-        <p class="mb-1">Recettes</p>
+        <%# <p class="mb-1">Recettes</p> %>
       <% end %>
     </div>
 
     <div class="icontext">
       <%= link_to dashboard_path, class:"text-footer" do %>
         <%= image_tag "rabbit.png", alt: "Le Wagon", width: 40 %>
-        <p class="mb-1">Profil</p>
+        <%# <p class="mb-1">Profil</p> %>
       <% end %>
     </div>
 
