--- a/app/views/ingredients/results.html.erb
+++ b/app/views/ingredients/results.html.erb
@@ -1,4 +1,4 @@
-<div class="main-container mt-4">
+<div class="main-container mt-4" data-controller="results">
   <div class="header-titre-subtitre">
     <div class="ingredients-generated-title">
       <%= image_tag("logo.png", class: "petite-carrote") %>
@@ -9,7 +9,7 @@
       <p class="m-0"> Ajoutez vos quantités !</p>
     </div>
 
-    <div data-controller="results">
+    <div>
     </div>
 
     <div id="results-container"></div>
